--- a/index.html
+++ b/index.html
@@ -14,21 +14,25 @@
 
     <script>
         async function LearnLinear() {
+            // Define a model for linear regression.
             const model = tf.sequential();
             model.add(tf.layers.dense({units:1, inputShape: [1]}))
 
+            // Prepare the model for training: Specify the loss and the optimizer.
             model.compile({
                 loss:'meanSquaredError',
                 optimizer:'sgd'
             });
             
             // Equation y = x
-
+            // Generate some synthetic data for training.
             const xs = tf.tensor2d([0, 1, 2, 3, 4, 5], [6, 1]);
             const ys = tf.tensor2d([0, 1, 2, 3, 4, 5], [6, 1]);
 
+            // Train the model using the data.
             await model.fit(xs,ys,{epochs:250});
 
+            // Use the model to do inference on a data point the model hasn't seen before:
             document.getElementById('output').innerHTML = model.predict(tf.tensor2d([6], [1, 1]));
         }
 
